--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../assets/app.css";
 import Navbar from '../components/Navbar.svelte';
+import { ClientRouter } from 'astro:transitions';
 ---
 
 <!doctype html>
@@ -30,6 +31,7 @@ import Navbar from '../components/Navbar.svelte';
 		</script>
 	</head>
 	<body>
+		<ClientRouter />
 		<main class="max-w-[1000px] mx-auto px-4 pt-3">
 			<Navbar client:load />
 			<div class="my-8"></div>
@@ -38,6 +40,7 @@ import Navbar from '../components/Navbar.svelte';
 		</main>
 	</body>
 </html>
+
 
 <style>
 	html,
