standardisation & mobile fix

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,9 +29,11 @@ import { ClientRouter } from 'astro:transitions';
 
 		gtag('config', 'G-7H9E0Y121Q');
 		</script>
+
+		<!-- Transitions -->
+		<ClientRouter />
 	</head>
 	<body>
-		<ClientRouter />
 		<main class="max-w-[1000px] mx-auto px-4 pt-3">
 			<Navbar client:load />
 			<div class="my-8"></div>
