manifold visualisation using three.js

--- a/src/pages/demos/manifolds.astro
+++ b/src/pages/demos/manifolds.astro
@@ -11,7 +11,7 @@ const samples = [
 ---
 
 <Layout>
-	<Manifolds client:load samples={samples} />
+	<Manifolds client:only samples={samples} />
 
 	<!-- Info Alert -->
 	<div role="alert" class="alert bg-gray-100 mt-6 mb-2">
